--- a/node/hello_world/index.html
+++ b/node/hello_world/index.html
@@ -4,10 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Node.js Rendered Web Page</title>
+  <style>
+    /* CSS styles to set the background color */
+    body {
+      background-color: orange; /* orange color */
+    }
+  </style>
 </head>
 <body>
   <h1>Welcome Overlords</h1>
-  <!-- Set the value attribute with the desired value -->
-  <input type="text" id="textbox" name="textbox" value="Hi Mom!">
+  <!-- Use the <select> element to create a dropdown menu -->
+  <select id="dropdown" name="dropdown">
+    <option value="banana">Banana</option>
+    <option value="carrot">Carrot</option>
+    <option value="cheese">Cheese</option>
+  </select>
 </body>
 </html>
